build(observability): adiciona Elasticsearch, Kibana e Jaeger Adiciona serviços de observabilidade no docker-compose, configura OpenTelemetry e Serilog, atualiza o Program.cs e appsettings, e inclui dependências necessárias no VacationSystem.API.csproj.

--- a/src/VacationSystem.API/appsettings.Development.json
+++ b/src/VacationSystem.API/appsettings.Development.json
@@ -15,12 +15,16 @@
     }
   },
   "RabbitMQ": {
-      "HostName": "localhost",
-      "Port": 5672,
-      "UserName": "guest",
-      "Password": "guest",
-      "VirtualHost": "/",
-      "ExchangeName": "vacation_system_exchange",
-      "QueueName": "vacation_system_queue"
-    }
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "ExchangeName": "vacation_system_exchange",
+    "QueueName": "vacation_system_queue"
+  },
+  "Elasticsearch": {
+    "Uri": "http://localhost:9200",
+    "IndexFormatPrefix": "vacationsystem-backend"
+  }
 }
