--- a/src/VacationSystem.API/appsettings.json
+++ b/src/VacationSystem.API/appsettings.json
@@ -5,14 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "RabbitMQ": {
-    "HostName": "localhost",
-    "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "VirtualHost": "/",
-    "ExchangeName": "vacation_system_exchange",
-    "QueueName": "vacation_system_queue"
-  }
+  "AllowedHosts": "*"
 }
